--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,19 +7,99 @@ output:
 
 
 ## Loading and preprocessing the data
-
-
+```{r}
+activity <- read.csv("activity.csv")
+```
 
 ## What is mean total number of steps taken per day?
 
+Total numbers of steps taken per day
+```{r}
+steps_d <- with(activity, tapply(steps, date, sum, na.rm = TRUE))
+```
 
+Histogram of total steps taken per day
+```{r}
+library(ggplot2)
+ggplot()+geom_histogram(aes(steps_d), bins=5, color="White") + ggtitle("Histogram of steps taken per day") + xlab("Steps")
+```
+
+Mean value of the total number of steps per day
+```{r}
+mean(steps_d)
+```
+
+Median value of the total number of steps per day
+```{r}
+median(steps_d)
+```
 
 ## What is the average daily activity pattern?
 
+Time series plot of the average number of steps taken in 5-minute interval
+```{r}
+steps_daily <- with(activity, tapply(steps, interval, mean, na.rm = TRUE))
+library(ggplot2)
+ggplot(data.frame(day = as.numeric(names(steps_daily)), step = steps_daily)) + geom_line(aes(day, step))
+```
 
+The 5-minute interval contains maximum number of steps on average across all the days
+```{r}
+names(which.max(steps_daily))
+```
 
 ## Imputing missing values
 
+Total Number of rows contains at least one NA
+```{r}
+sum(!complete.cases(activity))
+```
 
+Replace NA to the mean steps for that day.
+```{r}
+activity_imp <- activity
+for(i in seq_len(nrow(activity_imp))){
+        if(is.na(activity_imp[i, "steps"])){
+                activity_imp[i, "steps"] <- steps_d[activity_imp[i, "date"]]
+        }
+}
+```
+
+Total numbers of steps taken per day
+```{r}
+steps_d_imp <- with(activity_imp, tapply(steps, date, sum, na.rm = TRUE))
+```
+
+Histogram of total steps taken per day
+```{r}
+#hist(steps_d_imp, main = ("Histogram of steps taken per day"), xlab = "Steps")
+library(ggplot2)
+ggplot()+geom_histogram(aes(steps_d_imp), bins=5, color="White") + ggtitle("Histogram of steps taken per day") + xlab("Steps")
+```
+
+Mean value of the total number of steps per day
+```{r}
+mean(steps_d_imp)
+```
+
+Median value of the total number of steps per day
+```{r}
+median(steps_d_imp)
+```
+Histogram, mean, and median total number of steps taken per day do not changed after imputing missing data to the mean value.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+A new factor variable in the dataset with two levels - "weekday" and "weekend"
+Add the factor to a new colume "week" into the activity_imp
+```{r}
+weekend <- c("Saturday", "Sunday")
+activity_imp$week <- factor((weekdays(as.Date(activity_imp$date)) %in% weekend), levels = c(FALSE, TRUE), labels = c("Weekday", "Weekend"))
+```
+
+
+```{r}
+steps_dailyw <- with(activity_imp, aggregate(steps, list(interval, week), mean, na.rm = TRUE))
+
+library(ggplot2)
+ggplot(steps_dailyw, aes(Group.1, x)) + geom_line(aes(group = Group.2)) + facet_wrap(vars(Group.2), nrow = 2) + xlab("Interval") + ylab("Number of steps")
+```
